--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <surefire-version>3.0.0-M5</surefire-version>
+        <surefire-version>3.0.0-M7</surefire-version>
         <slf4j-version>1.7.36</slf4j-version>
         <!--suppress UnresolvedMavenProperty -->
         <logback-test-config>${maven.multiModuleProjectDirectory}/logback-test.xml</logback-test-config>
@@ -65,17 +65,16 @@
 
         <judo-tatami-base-version>1.1.0</judo-tatami-base-version>
 
-        <mapper-version>1.0.3.20220301_153541_5a46e1fe_develop</mapper-version>
+        <mapper-version>1.0.3</mapper-version>
         <osgi-filestore-version>1.3.0</osgi-filestore-version>
 
         <!-- Code Quality-->
+        <sonar-maven-plugin-version>3.9.1.2184</sonar-maven-plugin-version>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.language>java</sonar.language>
-        <sonar.java.source>${maven.compiler.source}</sonar.java.source>
-        <sonar.coverage.jacoco.xmlReportPaths>
-            ${project.basedir}/../judo-runtime-core-tests-aggregator/target/site/jacoco-aggregate/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.java.source>${java.version}</sonar.java.source>
+        <jacoco.version>0.8.8</jacoco.version>
     </properties>
 
     <url>http://github.com/${project-repositoryId}</url>
@@ -106,9 +105,9 @@
 
     <licenses>
         <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
+            <name>Eclipse Public License 2.0</name>
+            <url>https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.txt</url>
         </license>
     </licenses>
 
@@ -150,14 +149,16 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire-version}</version>
                     <configuration>
+                        <trimStackTrace>false</trimStackTrace>
                         <systemPropertyVariables>
                             <logback.configurationFile>${logback-test-config}</logback.configurationFile>
                         </systemPropertyVariables>
+                        <!--suppress UnresolvedMavenProperty -->
                         <argLine>
+                            ${jacoco.agent}
                             -Dfile.encoding=UTF-8
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.util=ALL-UNNAMED
@@ -166,6 +167,7 @@
                         <trimStackTrace>false</trimStackTrace>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
@@ -532,25 +534,111 @@
             </distributionManagement>
         </profile>
 
+
         <profile>
-            <id>coverage</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+            <id>generate-github-asciidoc-diagrams</id>
+
+            <properties>
+                <asciidoctor.maven.plugin.version>2.2.2</asciidoctor.maven.plugin.version>
+                <asciidoctorj.version>2.5.6</asciidoctorj.version>
+                <asciidoctorj.diagram.version>2.2.3</asciidoctorj.diagram.version>
+                <jruby.version>9.3.4.0</jruby.version>
+            </properties>
+
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.6</version>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctor-maven-plugin</artifactId>
+                        <version>${asciidoctor.maven.plugin.version}</version>
+                        <dependencies>
+                            <!-- Comment this section to use the default jruby artifact provided by the plugin -->
+                            <dependency>
+                                <groupId>org.jruby</groupId>
+                                <artifactId>jruby-complete</artifactId>
+                                <version>${jruby.version}</version>
+                            </dependency>
+                            <!-- Comment this section to use the default AsciidoctorJ artifact provided by the plugin -->
+                            <dependency>
+                                <groupId>org.asciidoctor</groupId>
+                                <artifactId>asciidoctorj</artifactId>
+                                <version>${asciidoctorj.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.asciidoctor</groupId>
+                                <artifactId>asciidoctorj-diagram</artifactId>
+                                <version>${asciidoctorj.diagram.version}</version>
+                            </dependency>
+                            <!-- Since asciidoctorj-diagram v2.2.0, uncomment to use specific version of plantuml or ditaa -->
+                            <dependency>
+                                <groupId>org.asciidoctor</groupId>
+                                <artifactId>asciidoctorj-diagram-plantuml</artifactId>
+                                <version>1.2022.5</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.asciidoctor</groupId>
+                                <artifactId>asciidoctorj-diagram-ditaamini</artifactId>
+                                <version>1.0.3</version>
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <sourceDirectory>./.github</sourceDirectory>
+                            <requires>
+                                <require>asciidoctor-diagram</require>
+                            </requires>
+                            <attributes>
+                                <!-- Example below shows how to specify in this pom instead of System's PATH, the location of dot command of Graphviz, required by PlantUML libraries -->
+                                <!-- Windows:
+                                    <graphvizdot>C:\Program Files (x86)\Graphviz2.38\bin\dot.exe</graphvizdot>
+                                -->
+                                <!-- *nix :
+                                    <graphvizdot>/usr/local/bin/dot</graphvizdot>
+                                -->
+                            </attributes>
+                        </configuration>
                         <executions>
                             <execution>
-                                <id>prepare-agent</id>
+                                <id>generate-html-doc</id>
+                                <phase>generate-resources</phase>
                                 <goals>
-                                    <goal>prepare-agent</goal>
+                                    <goal>process-asciidoc</goal>
                                 </goals>
                                 <configuration>
-                                    <propertyName>surefireArgLine</propertyName>
+                                    <backend>html5</backend>
+                                    <attributes>
+                                        <imagesdir>./images</imagesdir>
+                                        <toc>left</toc>
+                                        <icons>font</icons>
+                                        <sectanchors>true</sectanchors>
+                                        <idprefix/>
+                                        <idseparator>-</idseparator>
+                                    </attributes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>3.3.0</version>
+                        <executions>
+                            <execution>
+                                <id>copy-generated-gitflow-diagrams</id>
+                                <phase>generate-resources</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+
+                                <configuration>
+                                    <outputDirectory>${basedir}/.github</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${basedir}/target/generated-docs/images/</directory>
+                                            <includes>
+                                                <include>*.png</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
                                 </configuration>
                             </execution>
                         </executions>
@@ -583,46 +671,8 @@
                                 <configuration>
                                     <licenseName>epl_v2</licenseName>
                                     <roots>
-                                        <root>judo-runtime-core/src/main/java</root>
-                                        <root>judo-runtime-core/src/test/java</root>
-                                        <root>judo-runtime-core-accessmanager/src/main/java</root>
-                                        <root>judo-runtime-core-accessmanager/src/test/java</root>
-                                        <root>judo-runtime-core-accessmanager-api/src/main/java</root>
-                                        <root>judo-runtime-core-accessmanager-api/src/test/java</root>
-                                        <root>judo-runtime-core-bootstrap/src/main/java</root>
-                                        <root>judo-runtime-core-bootstrap/src/test/java</root>
-                                        <root>judo-runtime-core-bootstrap-hsqldb/src/main/java</root>
-                                        <root>judo-runtime-core-bootstrap-hsqldb/src/test/java</root>
-                                        <root>judo-runtime-core-bootstrap-postgresql/src/main/java</root>
-                                        <root>judo-runtime-core-bootstrap-postgresql/src/test/java</root>
-                                        <root>judo-runtime-core-dao-core/src/main/java</root>
-                                        <root>judo-runtime-core-dao-core/src/test/java</root>
-                                        <root>judo-runtime-core-dao-rdbms/src/main/java</root>
-                                        <root>judo-runtime-core-dao-rdbms/src/test/java</root>
-                                        <root>judo-runtime-core-dao-rdbms-hsqldb/src/main/java</root>
-                                        <root>judo-runtime-core-dao-rdbms-hsqldb/src/test/java</root>
-                                        <root>judo-runtime-core-dao-rdbms-liquibase/src/main/java</root>
-                                        <root>judo-runtime-core-dao-rdbms-liquibase/src/test/java</root>
-                                        <root>judo-runtime-core-dao-rdbms-postgresql/src/main/java</root>
-                                        <root>judo-runtime-core-dao-rdbms-postgresql/src/test/java</root>
-                                        <root>judo-runtime-core-dependencies/src/main/java</root>
-                                        <root>judo-runtime-core-dependencies/src/test/java</root>
-                                        <root>judo-runtime-core-dispatcher/src/main/java</root>
-                                        <root>judo-runtime-core-dispatcher/src/test/java</root>
-                                        <root>judo-runtime-core-expression/src/main/java</root>
-                                        <root>judo-runtime-core-expression/src/test/java</root>
-                                        <root>judo-runtime-core-query/src/main/java</root>
-                                        <root>judo-runtime-core-query/src/test/java</root>
-                                        <root>judo-runtime-core-security/src/main/java</root>
-                                        <root>judo-runtime-core-security/src/test/java</root>
-                                        <root>judo-runtime-core-spring/src/main/java</root>
-                                        <root>judo-runtime-core-spring/src/test/java</root>
-                                        <root>judo-runtime-core-spring-hsqldb/src/main/java</root>
-                                        <root>judo-runtime-core-spring-hsqldb/src/test/java</root>
-                                        <root>judo-runtime-core-spring-postgresql/src/main/java</root>
-                                        <root>judo-runtime-core-spring-postgresql/src/test/java</root>
-                                        <root>judo-runtime-core-validator/src/main/java</root>
-                                        <root>judo-runtime-core-validator/src/test/java</root>
+                                        <root>src/main/java</root>
+                                        <root>src/test</root>
                                     </roots>
                                 </configuration>
                             </execution>
