--- a/judo-runtime-core-dependencies/pom.xml
+++ b/judo-runtime-core-dependencies/pom.xml
@@ -76,8 +76,14 @@
 	        <dependency>
 	            <groupId>org.springframework</groupId>
 	            <artifactId>spring-jdbc</artifactId>
-	            <version>4.3.12.RELEASE</version>
+	            <version>${spring-version}</version>
 	        </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>hu.blackbelt.judo.tatami</groupId>
@@ -492,14 +498,14 @@
         </dependency>
 
         <dependency>
-            <groupId>com.atomikos</groupId>
-            <artifactId>transactions-jdbc</artifactId>
-            <version>5.0.6</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
+            <artifactId>spring-tx</artifactId>
         </dependency>
+
     </dependencies>
 </project>
