--- a/pom.xml
+++ b/pom.xml
@@ -359,17 +359,16 @@
                 </executions>
             </plugin>
 
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
                     <source>8</source>
+                    <doclint>none</doclint>
+                    <failOnError>false</failOnError>
                     <detectJavaApiLink>false</detectJavaApiLink>
-                    <sourcepath>
-                        ${project.basedir}/target/delombok,
-                        ${project.basedir}/target/generated-sources/antlr4
-                    </sourcepath>
                     <tags>
                         <tag>
                             <name>model</name>
