--- a/pom.xml
+++ b/pom.xml
@@ -43,28 +43,28 @@
         <jackson-version>2.11.4</jackson-version>
         <spring-version>4.3.12.RELEASE</spring-version>
 
-        <epsilon-runtime-version>1.5.0</epsilon-runtime-version>
-        <judo-tatami-core-version>1.1.2</judo-tatami-core-version>
+        <epsilon-runtime-version>1.5.1.20221026_231334_709fc633_develop</epsilon-runtime-version>
+        <judo-tatami-core-version>1.1.3.20221027_020917_d7259d09_develop</judo-tatami-core-version>
 
         <!-- Model versions -->
-        <judo-meta-rdbms-version>1.0.1</judo-meta-rdbms-version>
-        <judo-meta-asm-version>1.1.2</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.2</judo-meta-expression-version>
-        <judo-meta-expression-asm-version>1.0.2</judo-meta-expression-asm-version>
-        <judo-meta-measure-version>1.0.1</judo-meta-measure-version>
-        <judo-meta-liquibase-version>1.0.1</judo-meta-liquibase-version>
-        <judo-meta-query-version>1.0.1</judo-meta-query-version>
-        <judo-dao-api-version>1.0.2</judo-dao-api-version>
-        <judo-sdk-common-version>1.0.2</judo-sdk-common-version>
-        <judo-dispatcher-api-version>1.0.2</judo-dispatcher-api-version>
-        <judo-operation-utils-version>1.1.1</judo-operation-utils-version>
+        <judo-meta-rdbms-version>1.0.2.20221027_013544_ec519510_develop</judo-meta-rdbms-version>
+        <judo-meta-asm-version>1.1.3.20221027_013226_c155977f_develop</judo-meta-asm-version>
+        <judo-meta-expression-version>1.0.3.20221027_022134_8acd0df6_develop</judo-meta-expression-version>
+        <judo-meta-expression-asm-version>1.0.3.20221027_030126_b3fe8132_develop</judo-meta-expression-asm-version>
+        <judo-meta-measure-version>1.0.2.20221027_013343_22169497_develop</judo-meta-measure-version>
+        <judo-meta-liquibase-version>1.0.2.20221027_013513_8594e071_develop</judo-meta-liquibase-version>
+        <judo-meta-query-version>1.0.2.20221027_014417_ae576326_develop</judo-meta-query-version>
+        <judo-dao-api-version>1.0.3.20220930_100653_2b31acaa_develop</judo-dao-api-version>
+        <judo-sdk-common-version>1.0.3.20221027_020948_13a32b55_develop</judo-sdk-common-version>
+        <judo-dispatcher-api-version>1.0.3.20220926_012329_fb44a05f_develop</judo-dispatcher-api-version>
+        <judo-operation-utils-version>1.1.2.20221027_020740_f5ce49a7_develop</judo-operation-utils-version>
 
-        <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
+        <structured-map-proxy-version>1.2.1.20220927_090501_89bce74f_develop</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.2</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.3.20221027_032853_46b58d19_develop</judo-tatami-base-version>
 
-        <mapper-version>1.0.3</mapper-version>
-        <osgi-filestore-version>1.3.0</osgi-filestore-version>
+        <mapper-version>1.0.4.20220927_072413_239dbbd8_develop</mapper-version>
+        <osgi-filestore-version>1.3.1.20221026_231336_9e2c7d96_develop</osgi-filestore-version>
 
         <!-- Code Quality-->
         <sonar-maven-plugin-version>3.9.1.2184</sonar-maven-plugin-version>
