--- a/pom.xml
+++ b/pom.xml
@@ -44,24 +44,24 @@
         <spring-version>4.3.12.RELEASE</spring-version>
 
         <epsilon-runtime-version>1.5.0</epsilon-runtime-version>
-        <judo-tatami-core-version>1.1.3.20221125_224509_e29940fe_develop</judo-tatami-core-version>
+        <judo-tatami-core-version>1.1.3.20221129_223744_6e1235d5_develop</judo-tatami-core-version>
 
         <!-- Model versions -->
         <judo-meta-rdbms-version>1.0.1</judo-meta-rdbms-version>
-        <judo-meta-asm-version>1.1.3.20221102_102348_90786514_develop</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.3.20221125_223445_6135953f_develop</judo-meta-expression-version>
-        <judo-meta-expression-asm-version>1.0.3.20221123_202758_676934c5_develop</judo-meta-expression-asm-version>
+        <judo-meta-asm-version>1.1.3.20221129_223727_b614c55d_develop</judo-meta-asm-version>
+        <judo-meta-expression-version>1.0.3.20221129_224353_f29b79b8_develop</judo-meta-expression-version>
+        <judo-meta-expression-asm-version>1.0.3.20221129_224716_d27a5227_develop</judo-meta-expression-asm-version>
         <judo-meta-measure-version>1.0.1</judo-meta-measure-version>
         <judo-meta-liquibase-version>1.0.1</judo-meta-liquibase-version>
-        <judo-meta-query-version>1.0.2.20221114_142342_5450e768_develop</judo-meta-query-version>
-        <judo-dao-api-version>1.0.3.20221107_125042_022117fe_develop</judo-dao-api-version>
-        <judo-sdk-common-version>1.0.3.20221125_224422_77de590e_develop</judo-sdk-common-version>
+        <judo-meta-query-version>1.0.2.20221129_223712_d29461ec_develop</judo-meta-query-version>
+        <judo-dao-api-version>1.0.3</judo-dao-api-version>
+        <judo-sdk-common-version>1.0.2</judo-sdk-common-version>
         <judo-dispatcher-api-version>1.0.2</judo-dispatcher-api-version>
         <judo-operation-utils-version>1.1.1</judo-operation-utils-version>
 
         <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.3.20221123_203043_456081eb_develop</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.3.20221129_224940_1c297ab5_develop</judo-tatami-base-version>
 
         <mapper-version>1.0.3</mapper-version>
         <osgi-filestore-version>1.3.0</osgi-filestore-version>
