--- a/pom.xml
+++ b/pom.xml
@@ -44,24 +44,24 @@
         <spring-version>4.3.12.RELEASE</spring-version>
 
         <epsilon-runtime-version>1.5.0</epsilon-runtime-version>
-        <judo-tatami-core-version>1.1.3.20221129_233355_39a21bb8_develop</judo-tatami-core-version>
+        <judo-tatami-core-version>1.1.3</judo-tatami-core-version>
 
         <!-- Model versions -->
         <judo-meta-rdbms-version>1.0.1</judo-meta-rdbms-version>
-        <judo-meta-asm-version>1.1.3.20221129_233335_608f8400_develop</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.3.20221130_005240_9c2b7b22_develop</judo-meta-expression-version>
-        <judo-meta-expression-asm-version>1.0.3.20221130_005625_7eb002bf_develop</judo-meta-expression-asm-version>
+        <judo-meta-asm-version>1.1.4.20221130_085619_85599a94_develop</judo-meta-asm-version>
+        <judo-meta-expression-version>1.0.4.20221130_230654_ad6c1ae9_develop</judo-meta-expression-version>
+        <judo-meta-expression-asm-version>1.0.4.20221130_231022_f856cca8_develop</judo-meta-expression-asm-version>
         <judo-meta-measure-version>1.0.1</judo-meta-measure-version>
         <judo-meta-liquibase-version>1.0.1</judo-meta-liquibase-version>
-        <judo-meta-query-version>1.0.2.20221129_233319_29c3433d_develop</judo-meta-query-version>
+        <judo-meta-query-version>1.0.3.20221130_085013_53ebcb02_develop</judo-meta-query-version>
         <judo-dao-api-version>1.0.3</judo-dao-api-version>
-        <judo-sdk-common-version>1.0.3.20221130_005250_707bcc05_develop</judo-sdk-common-version>
+        <judo-sdk-common-version>1.0.2</judo-sdk-common-version>
         <judo-dispatcher-api-version>1.0.2</judo-dispatcher-api-version>
         <judo-operation-utils-version>1.1.1</judo-operation-utils-version>
 
         <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.3.20221130_005847_7bd42795_develop</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.3.20221130_231304_d5b009c2_develop</judo-tatami-base-version>
 
         <mapper-version>1.0.3</mapper-version>
         <osgi-filestore-version>1.3.0</osgi-filestore-version>
