--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 
         <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.4</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.5.20221205_235618_eac4970d_develop</judo-tatami-base-version>
 
         <mapper-version>1.0.3</mapper-version>
         <osgi-filestore-version>1.3.0</osgi-filestore-version>
