--- a/pom.xml
+++ b/pom.xml
@@ -48,20 +48,20 @@
 
         <!-- Model versions -->
         <judo-meta-rdbms-version>1.0.1</judo-meta-rdbms-version>
-        <judo-meta-asm-version>1.1.3</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.4</judo-meta-expression-version>
-        <judo-meta-expression-asm-version>1.0.4</judo-meta-expression-asm-version>
+        <judo-meta-asm-version>1.1.4.20221130_085619_85599a94_develop</judo-meta-asm-version>
+        <judo-meta-expression-version>1.0.5.20221206_165458_d89bc42d_develop</judo-meta-expression-version>
+        <judo-meta-expression-asm-version>1.0.5.20221206_165901_2b1896e0_develop</judo-meta-expression-asm-version>
         <judo-meta-measure-version>1.0.1</judo-meta-measure-version>
         <judo-meta-liquibase-version>1.0.1</judo-meta-liquibase-version>
-        <judo-meta-query-version>1.0.2</judo-meta-query-version>
+        <judo-meta-query-version>1.0.3.20221130_085013_53ebcb02_develop</judo-meta-query-version>
         <judo-dao-api-version>1.0.3</judo-dao-api-version>
-        <judo-sdk-common-version>1.0.3</judo-sdk-common-version>
+        <judo-sdk-common-version>1.0.2</judo-sdk-common-version>
         <judo-dispatcher-api-version>1.0.2</judo-dispatcher-api-version>
-        <judo-operation-utils-version>1.1.2</judo-operation-utils-version>
+        <judo-operation-utils-version>1.1.1</judo-operation-utils-version>
 
         <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.5</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.6.20221206_170141_af800b59_develop</judo-tatami-base-version>
 
         <mapper-version>1.0.3</mapper-version>
         <osgi-filestore-version>1.3.0</osgi-filestore-version>
