--- a/pom.xml
+++ b/pom.xml
@@ -43,28 +43,28 @@
         <jackson-version>2.11.4</jackson-version>
         <spring-version>4.3.12.RELEASE</spring-version>
 
-        <epsilon-runtime-version>1.5.0</epsilon-runtime-version>
-        <judo-tatami-core-version>1.1.3</judo-tatami-core-version>
+        <epsilon-runtime-version>1.5.1.20230104_095653_96994f3f_develop</epsilon-runtime-version>
+        <judo-tatami-core-version>1.1.4.20230104_100003_afbd3f64_develop</judo-tatami-core-version>
 
         <!-- Model versions -->
-        <judo-meta-rdbms-version>1.0.1</judo-meta-rdbms-version>
-        <judo-meta-asm-version>1.1.4.20221130_085619_85599a94_develop</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.5.20221206_165458_d89bc42d_develop</judo-meta-expression-version>
-        <judo-meta-expression-asm-version>1.0.5.20221206_165901_2b1896e0_develop</judo-meta-expression-asm-version>
-        <judo-meta-measure-version>1.0.1</judo-meta-measure-version>
-        <judo-meta-liquibase-version>1.0.1</judo-meta-liquibase-version>
-        <judo-meta-query-version>1.0.3.20221130_085013_53ebcb02_develop</judo-meta-query-version>
-        <judo-dao-api-version>1.0.3</judo-dao-api-version>
-        <judo-sdk-common-version>1.0.2</judo-sdk-common-version>
+        <judo-meta-rdbms-version>1.0.2.20230104_101106_738c6c4b_develop</judo-meta-rdbms-version>
+        <judo-meta-asm-version>1.1.4.20230104_101021_1f09f02d_develop</judo-meta-asm-version>
+        <judo-meta-expression-version>1.0.5.20230104_101301_ff3ea10c_develop</judo-meta-expression-version>
+        <judo-meta-expression-asm-version>1.0.5.20230104_101722_3bac5cc6_develop</judo-meta-expression-asm-version>
+        <judo-meta-measure-version>1.0.2.20230104_101002_4eea168c_develop</judo-meta-measure-version>
+        <judo-meta-liquibase-version>1.0.2.20230104_100958_7efd43ef_develop</judo-meta-liquibase-version>
+        <judo-meta-query-version>1.0.3.20230104_101008_5f27ba01_develop</judo-meta-query-version>
+        <judo-dao-api-version>1.0.4.20230104_085331_646e6016_develop</judo-dao-api-version>
+        <judo-sdk-common-version>1.0.4.20230104_101323_b086a742_develop</judo-sdk-common-version>
         <judo-dispatcher-api-version>1.0.2</judo-dispatcher-api-version>
-        <judo-operation-utils-version>1.1.1</judo-operation-utils-version>
+        <judo-operation-utils-version>1.1.3.20230104_101326_2d77cc03_develop</judo-operation-utils-version>
 
         <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.6.20221209_041725_fe229185_develop</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.6.20230104_103626_aff3454b_develop</judo-tatami-base-version>
 
         <mapper-version>1.0.3</mapper-version>
-        <osgi-filestore-version>1.3.0</osgi-filestore-version>
+        <osgi-filestore-version>1.3.1.20230104_095652_89055e2a_develop</osgi-filestore-version>
 
         <!-- Code Quality-->
         <sonar-maven-plugin-version>3.9.1.2184</sonar-maven-plugin-version>
