--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 
         <structured-map-proxy-version>1.2.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.6-SNAPSHOT</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.6.20230220_171051_377914d1_feature_JNG_4269_SemiAutomaticSchemaUpgrade</judo-tatami-base-version>
 
         <mapper-version>1.0.3</mapper-version>
         <osgi-filestore-version>1.3.1.20230131_040907_5db51bf4_develop</osgi-filestore-version>
