--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 
         <judo-tatami-base-version>1.1.6.20230309_135229_d6fb67e6_feature_JNG_3902_Fix_timestamp_asstring</judo-tatami-base-version>
 
-        <mapper-version>1.0.3</mapper-version>
+        <mapper-version>1.0.4.20230309_193107_771d6038_feature_JNG_3902_Fix_timestamp_asstring</mapper-version>
         <osgi-filestore-version>1.3.1.20230309_124438_a2f5a014_develop</osgi-filestore-version>
 
         <!-- Code Quality-->
